--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -22,22 +15,34 @@
 
     <div>
         <main>
-            <div>
-                <form>
-                    <div class="card-body">
-                        <h5 class="card-title">Search for a brewery near you</h5>
-                        <input id="inputField" class="input-group" placeholder="search!">
-                        <select id="selectOpt">
-                            <option selected>Filter</option>
-                            <option value="1">City</option>
-                            <option value="2">Distance</option>
-                            <option value="3">Name</option>
-                        </select>
-                        <button class="btn1" id="btn">Submit</button>    
-                    </div>
-                </form>
-            </div>
+            <div class="box">
+                <input class="input is-rounded" type="text" placeholder="Search">
+                <div class="select is-rounded">
+                    <select>
+                      <option>Filter</option>
+                      <option>Mirco</option>
+                      <option>Nano</option>
+                      <option>Regional</option>
+                      <option>Brewpub</option>
+                      <option>Large</option>
+                      <option>Planning</option>
+                      <option>Bar</option>
+                      <option>Contract</option>
+                      <option>Proprietor</option>
+                      <option>Closed</option>
+                    </select>
+                </div>
+                <button class="button is-rounded">Submit</button>
+            </div>   
+            </div>  
         </main>
+        <footer class="footer">
+            <div class="content has-text-centered">
+              <p>
+                <strong>Brewery Finder</strong> by <a href="https://github.com/davidlucio/breweryfinder">Brewery Boys</a>.
+              </p>
+            </div>
+          </footer>
     
 </body>
 <script src="leaflet-geoip.js"></script>
