--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet" href="./assets/css/displaybookmark.css"> <!-- DELETE LATER -->
+        <link rel="stylesheet" href="./assets/css/displaybookmark.css">
+        <link rel="stylesheet" href= "assets/css/mapfunctionality.css" <!-- DELETE LATER -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 
         <script src="https://kit.fontawesome.com/3dafd30171.js" crossorigin="anonymous"></script>
@@ -66,6 +67,7 @@
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
         <script src="./assets/js/script.js"></script>
         <script src="./assets/js/displaybookmark.js"></script> <!-- DELETE LATER -->
+        <script src="assets/js/mapfunctionality.js"></script>
         
     </body>
 </html>
