MVP to merge into dev and main.

--- a/index.html
+++ b/index.html
@@ -23,26 +23,6 @@
 
         <main>
 
-            <section class="box">
-                <input class="input is-rounded" type="text" placeholder="Search">
-                <div class="select is-rounded">
-                    <select>
-                      <option>Filter</option>
-                      <option>Mirco</option>
-                      <option>Nano</option>
-                      <option>Regional</option>
-                      <option>Brewpub</option>
-                      <option>Large</option>
-                      <option>Planning</option>
-                      <option>Bar</option>
-                      <option>Contract</option>
-                      <option>Proprietor</option>
-                      <option>Closed</option>
-                    </select>
-                </div>
-                <button class="button is-rounded">Submit</button>
-            </section>
-
             <section id=brewerycard class="card-body loading">
                 <span id=bookmark class="far fa-bookmark"></span>
                 <p class="loading-icon"><span class="fa fa-spinner fa-spin"></span></p>
@@ -50,6 +30,10 @@
                 <div id="brewerymap"></div>
             </section>
                         
+            <section class="box">
+                <button class="button is-rounded" id="shuffle">Shuffle?</button>
+            </section>
+
             <section id=bookmarkcard></section>
         </main>
       
