added value to dropdown

--- a/index.html
+++ b/index.html
@@ -23,29 +23,26 @@
             <input class="input is-rounded" type="text" placeholder="Search">
               <div class="select is-rounded">
                 <select>
-                  <option value="1">Filter</option>
-                  <option value="2">Mirco</option>
-                  <option value="3">Nano</option>
-                  <option value="4">Regional</option>
-                  <option value="5">Brewpub</option>
-                  <option value="6">Large</option>
-                  <option value="7">Planning</option>
-                  <option value="8">Bar</option>
-                  <option value="9">Contract</option>
-                  <option value="10">Proprietor</option>
-                  <option value="11">Closed</option>
+                  <option>Filter</option>
+                  <option value="1"></option>>Mirco</option>
+                  <option value="2"></option>>Nano</option>
+                  <option value="3"></option>>Regional</option>
+                  <option value="4"></option>>Brewpub</option>
+                  <option value="5"></option>>Large</option>
+                  <option value="6"></option>>Planning</option>
+                  <option value="7"></option>>Bar</option>
+                  <option value="8"></option>>Contract</option>
+                  <option value="9"></option>>Proprietor</option>
+                  <option value="10"></option>>Closed</option>
                 </select>
               </div>
                 <button class="button is-rounded">Submit</button>
           </div>
                 <section id=brewerycard class="loading">
                     <p class="loading-icon"><span class="fa fa-spinner fa-spin"></span></p>
-                     <!-- map goes here -->
                 </section>
                 
-                <section id=bookmark-card>
-                  <p>Click to bookmark this brewery</p>
-                </section>
+                <section id=bookmark-card></section>
         </main>
         
        <footer class="footer">
