Tried to fix bug, added branding, and minor style changes.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         
         <header>
-            <h1>Brewery Finder</h1>
+            <h1>HOP'R</h1>
         </header>
 
         <main>
@@ -31,7 +31,7 @@
             </section>
                         
             <section class="box">
-                <button class="button is-rounded" id="shuffle">Shuffle?</button>
+                <button class="button is-rounded" id="shuffle">Hop 'Round?</button>
             </section>
 
             <section id=bookmarkcard></section>
